--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                     <outputDirectory>target</outputDirectory>
-              		  <warName>ROOT</warName>
+              		  <warName>springboot</warName>
                 </configuration>
             </plugin>
 		</plugins>
