--- a/pom.xml
+++ b/pom.xml
@@ -73,12 +73,18 @@
 	</build>
 
 	<profiles>
-	
+
 		<profile>
 			<id>openshift</id>
 			<build>
 				<plugins>
 					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-war-plugin</artifactId>
 						<version>2.1.1</version>
 						<configuration>
